# rra

./: .gitignore  PROCESS.md  pyproject.toml
experiments/: exp01_identity_check.py  exp02_model_survey.py  exp03_head_normalized_grid.py  exp04_context_scaling.py  harness.py  models.py  run_suite.sh
rra/: __init__.py  routed_patch.py
