[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rra"
version = "0.1.0"
description = "Resolution-Routed Attention — MLX implementation and experiment suite"
requires-python = ">=3.11"
dependencies = [
    "mlx-lm>=0.22",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "datasets>=2.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rra", "experiments"]

[tool.hatch.build.targets.sdist]
include = ["rra/", "experiments/"]
